Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 RC
-
None
-
Windows 7 64-bit
Reproduced also on Linux
Description
The jpg files in the attached example are rendered as black boxes in Qt 5.5.0.
Attachments
Issue Links
- is duplicated by
-
QTBUG-47326 QImage may fail to read images in Qt 5.5
-
- Closed
-
-
QTBUG-47748 Jpeg image plugin can not read some jpeg files without exif infomation.
-
- Closed
-
-
QTBUG-47943 QPixmap::load() does not load some images in qt 5.5 but in qt 5.4.1 it works.
-
- Closed
-
-
QTBUG-48458 JPG image can't be read by Qt when it was saved by Qt itself
-
- Closed
-
-
QTBUG-47261 Regression: QImage fails to load jpg file with EXIF
-
- Closed
-
-
QTBUG-47476 QImage doesn't read JPEGs saved from Photoshop (regression from 5.4 to 5.5)
-
- Closed
-
-
QTBUG-49572 QImageReader fails on legal jpegs
-
- Closed
-
- relates to
-
QTBUG-47052 Qt does not load JPEG files with invalid (reserved) Exif orientation
-
- Closed
-