Fix decoding of JPEGs with invalid EXIF headers

We should accept JPEGs with broken EXIF headers since the header is
optional and can be ignored if broken.

Task-number: QTBUG-46870
Change-Id: I494e5497b8449ce6494285d4d77caadbbb0ccaf8
Reviewed-by: aavit <eirik.aavitsland@theqtcompany.com>

cregit: fdef1dc7fe0ff721b393fa9077117869a5d6ac01 https://github.com/qt/qtbase/commit/fdef1dc7fe0ff721b393fa9077117869a5d6ac01